Setting main styling to text align center position relative, to fix default content for image text overlap

--- a/assets/css/responsive-main-bottom-top.css
+++ b/assets/css/responsive-main-bottom-top.css
@@ -6,10 +6,10 @@
   nav a{
     display:inline-block;
   }
-  /* main{
-    display: flex;
-    flex-wrap: wrap;
-  } */
+  main{
+    text-align: center;
+    position: relative;
+  }
   main #div-main-text{
     width: 40%;
     min-width: 200px;
